# calendar-app

./: CMakeLists.txt  README.md  secrets.env
docs/: logs.txt
include/: background_log.h  http_handler.h  notes.h  option_handlers.h  utils.h
src/: background_log.c  http_handler.c  main.c  notes.c  option_handlers.c  utils.c
